Fixed the overflow issue

--- a/style/main.less
+++ b/style/main.less
@@ -6,6 +6,7 @@ html, body{
   overscroll-behavior-y: none;
   background-color: #000;
   font-size: 12px;
+  overflow-x: scroll;
   * {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
